sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3: error: not found: value cocktailSort3
		cocktailSort3();
                ^AlgCocktailSort3:15: error: type mismatch;
 found   : Boolean(false)
 required: Int
        fin=false;
            ^